--- a/index.html
+++ b/index.html
@@ -5138,7 +5138,7 @@ Transforme seus minutos em dinheiro!" />
 
         <div class="notification">
             <div class="notification-header">
-                <h3 class="notification-title">Notificação - Link da Sorte</h3>
+                <h3 class="notification-title">Notificação - Cris Slots</h3>
                 <i class="fa fa-times notification-close"></i>
             </div>
             <div class="notification-container">
